--- a/src/DSTest.Api/DSTest.Api.csproj
+++ b/src/DSTest.Api/DSTest.Api.csproj
@@ -20,10 +20,6 @@
     </ItemGroup>
 
     <ItemGroup>
-        <Folder Include="Migrations" />
-    </ItemGroup>
-
-    <ItemGroup>
       <ProjectReference Include="..\DSTest.Application\DSTest.Application.csproj" />
       <ProjectReference Include="..\DSTest.Domain\DSTest.Domain.csproj" />
       <ProjectReference Include="..\DSTest.Infrastructure\DSTest.Infrastructure.csproj" />
@@ -31,6 +27,19 @@
 
     <ItemGroup>
       <None Remove="Dockerfile" />
+      <None Remove="Migrations\**" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <Compile Remove="Migrations\**" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <EmbeddedResource Remove="Migrations\**" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <Content Remove="Migrations\**" />
     </ItemGroup>
 
 </Project>
