--- a/src/DSTest.Api/appsettings.Development.json
+++ b/src/DSTest.Api/appsettings.Development.json
@@ -6,5 +6,5 @@
     }
   },
   "Environment": "Development",
-  "ConnectionString": "Host=localhost;Port=8888;Username=postgres;Password=super;Database=DSTest"
+  "ConnectionString": "Host=localhost;Port=8888;Username=postgres;Password=postgres;Database=DSTest"
 }
