--- a/src/DSTest.Api/appsettings.json
+++ b/src/DSTest.Api/appsettings.json
@@ -6,5 +6,6 @@
     }
   },
   "AllowedHosts": "*",
-  "Environment": "Production"
+  "Environment": "Production",
+  "ConnectionString": "Host=postgres;Port=5432;Username=postgres;Password=postgres;Database=DSTest"
 }
