--- a/.dockerignore
+++ b/.dockerignore
@@ -13,6 +13,8 @@
 # User-specific files (MonoDevelop/Xamarin Studio)
 *.userprefs
 
+src/DSTest.Api/ClientApp/node_modules
+
 # Mono auto generated files
 mono_crash.*
 
