--- a/src/DSTest.Domain/DSTest.Domain.csproj
+++ b/src/DSTest.Domain/DSTest.Domain.csproj
@@ -14,6 +14,7 @@
 
     <ItemGroup>
       <PackageReference Include="EntityFramework" Version="6.4.4" />
+      <PackageReference Include="Microsoft.AspNetCore.Http.Features" Version="6.0.0-preview.4.21253.5" />
     </ItemGroup>
 
 </Project>
